--- a/views/pageHot.ejs
+++ b/views/pageHot.ejs
@@ -93,7 +93,7 @@
             });
 
             var featureLayer = new FeatureLayer({
-                url: "https://10.60.42.201:6442/arcgis/rest/services/AreaCount/MapServer/0",
+                url: "https://10.60.42.201:6442/arcgis/rest/services/文化产业热点/MapServer/0",
                 outFields: ["*"],
                 popupTemplate: template
             });
@@ -163,7 +163,7 @@
     });
 
     var featureLayer = new FeatureLayer({
-      url: "https://10.60.42.201:6442/arcgis/rest/services/AreaCount/MapServer/0",
+      url: "https://10.60.42.201:6442/arcgis/rest/services/文化产业热点/MapServer/0",
       outFields: ["*"],
       popupTemplate: template
     });
